<resources>
    <string name="app_name">IslamQAOrg</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">IslamQA</string>
    <string name="second_fragment_label">Answer</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="content_desc_go_to_details">Go to details</string>
    <string name="content_desc_app_logo">App logo</string>
    <string name="content_desc_settings">Go to settings</string>
    <string name="content_desc_sync">Sync questions</string>
    <string name="q_n_a"><![CDATA[Questions & Answers]]></string>
    <string name="label_relevant_q_n_a"><![CDATA[Relevant Q&A]]></string>
    <string name="label_random_q_n_a"><![CDATA[Random List of Q&A]]></string>
    <string name="hint_know_more">Know more…</string>
    <string name="content_madhab_details">Literally the word madhab is derived from an Arabic word which means “to go” or “to take as a way”. Technically it refers to a particular Imams school of thought such as Imam Abu Hanifa, Imam Malik, Imam Shafiee and Imam Ahmad.\n\nMadhab is a means by which an individual seeks to follow Allah’s command in regards to a number of interpretive possibilities in deriving the rule of Allah from the primary sources such as the Quran and the Hadith.\n\nThe reason why a person may follow a particular madhab could depend on many factors. It could be that a particular madhab is dominant in the area therefore it is easy for the individual to obtain knowledge and get one’s questions answered more easily. However it should be remembered that a person who follows a particular madhab should remain steadfast on the madhab of his choice and concentrate on acquiring the knowledge of that particular madhab. Although there is no harm in acquiring the knowledge of other madhabs to increase one self with the knowledge of religion.</string>
    <string name="label_settings">Settings</string>
    <string name="label_about">About</string>
    <string name="content_islam_qa_about"><![CDATA[Assalaamu ‘alaikum.  IslamQA.org is a repository of Islamic answers. We have collected over 93,950 Islamic Q&A from the official websites of various scholars and Islamic educational institutions around the world.  You can find answers to your questions from different school of thoughts (madaahib) from the Sunni scholarship. So far, we have collected around 87,000 answers from Hanafi Fiqh, around 5,700 answers from Shafi’i Fiqh, around 270 answers from Maliki Fiqh, and around 280 answers from the Hanbali fiqh.  We do not answer questions on our own. If you have any Islamic questions, please see our Ask Question page where we provide contact information of various scholars.  At IslamQA.org, we archive a copy of the answers we collect. This way even if the original site is no longer maintained, you can still find a record of the answer on our website. Since 2012, we have been able to preserve around 7,400 answers from various sites which are no longer functional.  We are not affiliated with any of the sites we have indexed. However, over the years, we have been in contact with many notable scholars, including Mufti Muhammad ibn Adam Al Kawthari from the UK, Mufti Faisal bin Abdul Hameed al-Mahmudi from Canada, Sheikh Jamir Dean Meah from Jordan, among others.  InshaAllaah we hope you find this website beneficial. Kindly forgive our shortcomings and keep us in your du’as.  Assalaaamu ‘alaikum.  IslamQA Admin]]></string>
    <string name="content_desc_open_github_source_code">Go to GitHub App Source Code</string>
    <string name="label_latest_q_n_a"><![CDATA[Latest Q&A]]></string>
    <string name="about_app"><![CDATA[This app is a native android frontend of IslamQA.org, which is a repository of Islamic answers. They have collected over 93,950 Islamic Q&A from the official websites of various scholars and Islamic educational institutions around the world.]]></string>
    <string name="label_fiqh">Fiqh</string>
    <string name="hint_fiqh">Select your preferred madhab.</string>
    <string name="hint_about">Learn more about this application</string>
    <string name="label_info">Info</string>
    <string name="label_preferences">Preferences</string>
    <string name="label_madhab">Madhab</string>
    <string name="label_hanafi_fiqh">Hanfi Fiqh</string>
    <string name="label_save">Save</string>
    <string name="warning_fiqh">Default Madhab is set to Hanafi</string>
    <string name="hint_selected_fiqh">Your currently preferred madhab is %1$s Fiqh.</string>
    <string name="question_source_text">Answered according to %1$s by %2$s</string>
    <string name="content_desc_go_back">Go back to previous screen</string>
    <string name="content_desc_select_fiqh">Select your preferred Fiqh</string>
    <string name="content_desc_about_developer">Know about developer</string>
    <string name="label_syncing">We are syncing the questions and answers from IslamQA.org in the background. It will ensure faster loading, the next time you enter this app. It will also reduce load on the original website.</string>
    <string name="label_synced">We are done syncing. Note that, this app is just a frontend for IslamQA.org. Please, pray for the creator of this awesome website for their amazing work. Visit this website for any of your query.</string>
    <string name="content_desc_search">Search for questions</string>
    <string name="notification_title">Syncing questions and answers</string>
    <string name="cancel_download">Cancel syncing</string>
    <string name="label_q_n_a"><![CDATA[Q&A List]]></string>
</resources>