<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_design_geometry"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:layout_marginEnd="-30dp"
                android:contentDescription="@string/app_name"
                android:elevation="2dp"
                android:src="@drawable/ic_islamic_geometric"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/md_theme_dark_primary_trans" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="62dp"
                android:fontFamily="@font/arabian_onenighlsland"
                android:text="@string/q_n_a"
                android:textAlignment="center"
                android:textColor="?android:textColorPrimary"
                android:textSize="46sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_relevant_q_n_a_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/cardo_bold"
                android:text="@string/label_random_q_n_a"
                android:textColor="?android:colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_relevant_q_n_a_label"
                tools:itemCount="1"
                tools:listitem="@layout/slide_question" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/sfl_random_question_loading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="14dp"
                android:orientation="vertical"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_relevant_q_n_a_label"
                app:shimmer_base_alpha="0.6"
                app:shimmer_base_color="@color/md_theme_light_surface">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <include layout="@layout/slide_question_placeholder" />

                    <include layout="@layout/slide_question_placeholder" />

                </LinearLayout>
            </com.facebook.shimmer.ShimmerFrameLayout>


            <TextView
                android:id="@+id/tv_fiqh_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/cardo_bold"
                android:text="@string/label_latest_q_n_a"
                android:textColor="?android:colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sfl_random_question_loading" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_latest_questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="12dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_fiqh_label"
                tools:itemCount="5"
                tools:listitem="@layout/list_question" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/sfl_fiqh_based_question_loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_fiqh_label">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical">

                    <include layout="@layout/list_question_placeholder" />

                    <include layout="@layout/list_question_placeholder" />

                    <include layout="@layout/list_question_placeholder" />

                    <include layout="@layout/list_question_placeholder" />

                    <include layout="@layout/list_question_placeholder" />

                    <include layout="@layout/list_question_placeholder" />
                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>