<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="?android:colorPrimary"
            app:cardCornerRadius="5000dp"
            app:cardElevation="0.2dp"
            app:layout_constraintBottom_toTopOf="@+id/ll_actions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:backgroundTint="@color/md_theme_light_onTertiary"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_islamqa"
                app:tint="?android:colorBackground" />

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:elevation="5dp"
            app:cardBackgroundColor="@color/md_theme_light_tertiary"
            app:cardCornerRadius="100dp"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toBottomOf="@id/cv_logo"
            app:layout_constraintBottom_toTopOf="@id/cv_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.65"
            app:layout_constraintStart_toStartOf="@id/cv_logo"
            app:layout_constraintTop_toTopOf="@id/cv_logo">

            <TextView
                android:id="@+id/tv_app_version_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="18dp"
                android:layout_marginVertical="4dp"
                android:fontFamily="@font/cardo_italic"
                android:gravity="center_vertical"
                android:textColor="@color/md_theme_light_onTertiary"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="0.0.1" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/cardo_italic"
            android:text="@string/about_app"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/ll_actions"
            app:layout_constraintTop_toBottomOf="@id/cv_logo"
            app:layout_constraintVertical_bias="0.1" />

        <LinearLayout
            android:id="@+id/ll_actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="52dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_licenses"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_marginHorizontal="12dp"
                app:cardBackgroundColor="?android:colorPrimary"
                app:cardCornerRadius="100dp"
                app:cardElevation="0dp"
                tools:cardBackgroundColor="?android:colorPrimary">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/content_desc_open_github_source_code"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_license"
                    app:tint="?android:colorBackground" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_source_code"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_marginHorizontal="12dp"
                app:cardBackgroundColor="?android:colorPrimary"
                app:cardCornerRadius="100dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/content_desc_open_github_source_code"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_source_code"
                    app:tint="?android:colorBackground" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_about"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_marginHorizontal="12dp"
                app:cardBackgroundColor="?android:colorPrimary"
                app:cardCornerRadius="100dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/content_desc_open_github_source_code"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_info"
                    app:tint="?android:colorBackground" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>